# sundials

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .uberenv_config.json  CHANGELOG.md  CHANGES  CITATIONS.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  INSTALL  INSTALL_NOTES  LICENSE  Makefile  Makefile.in  MytStashAdminCheatSheet.txt  NVIDIA-EULA.txt  README  README.md  README_DEV  Release_Checklist.txt  TESTING  TO-DO.txt  TODO  acinclude.m4  aclocal.m4  config.hin  config.suggest  configure  configure-dev.ac  configure-rel-full.ac  configure-rel-serial.ac  configure-rel.ac  configure.ac  (+17 more)
benchmarks/: CMakeLists.txt
benchmarks/advection_reaction_3D/: CMakeLists.txt  ParallelGrid.hpp  advection_reaction_3D.cpp  advection_reaction_3D.hpp  arkode_driver.cpp  cvode_driver.cpp  ida_driver.cpp  rhs3D.hpp
benchmarks/diffusion_2D/: CMakeLists.txt  README.md  diffusion_2D.cpp  diffusion_2D.hpp  main_arkode.cpp  main_cvode.cpp  main_ida.cpp  preconditioner_jacobi.cpp
benchmarks/nvector/: CMakeLists.txt  plot_nvector_performance_results.py  plot_nvector_performance_speedup.py  plot_nvector_timings.py  test_nvector_performance.c  test_nvector_performance.h
bindings/pysundials/: CMakeLists.txt  generate.py  generate_all.sh  litgen_extensions.py  pysundials.cpp
examples/: CMakeLists.txt  test_utilities.f90
examples/arkode/: CMakeLists.txt
examples/cpodes/: CMakeLists.txt
examples/cvode/: CMakeLists.txt
examples/cvodes/: CMakeLists.txt
examples/ida/: CMakeLists.txt
examples/idas/: CMakeLists.txt
examples/kinsol/: CMakeLists.txt
examples/nvector/: CMakeLists.txt  test_mpinvector.c  test_nvector.c  test_nvector.f90  test_nvector.h  test_nvector_openmp.c  test_nvector_serial.c
examples/sunlinsol/: CMakeLists.txt  test_sunlinsol.c  test_sunlinsol.f90  test_sunlinsol.h
examples/sunmatrix/: CMakeLists.txt  dreadrb.c  dreadrb.h  test_sunmatrix.c  test_sunmatrix.f90  test_sunmatrix.h
examples/sunnonlinsol/: CMakeLists.txt
examples/templates/: cmakelists_CUDA_MPI_ex.in  cmakelists_CUDA_ex.in  cmakelists_CXX_MPI_ex.in  cmakelists_CXX_ex.in  cmakelists_CXX_ginkgo_ex.in  cmakelists_C_MPI_ex.in  cmakelists_C_ex.in  cmakelists_C_openmp_ex.in  cmakelists_C_pthreads_ex.in  cmakelists_HIP_MPI_ex.in  cmakelists_HIP_ex.in  cmakelists_MPI_ex.in  cmakelists_cuda_CUDA_ex.in  cmakelists_cuda_CXX_ex.in  cmakelists_cuda_C_ex.in  cmakelists_openmp_C_ex.in  cmakelists_openmp_F2003_ex.in  cmakelists_openmp_F77_ex.in  cmakelists_openmpdev_ex.in  cmakelists_parallel_CUDA_ex.in  cmakelists_parallel_CXX_ex.in  cmakelists_parallel_C_ex.in  cmakelists_parallel_F2003_ex.in  cmakelists_parallel_F77_ex.in  cmakelists_parallel_F90_ex.in  cmakelists_parallel_RAJA_ex.in  cmakelists_parhyp_CXX_ex.in  cmakelists_parhyp_C_ex.in  cmakelists_petsc_C_ex.in  cmakelists_pthreads_C_ex.in  cmakelists_pthreads_F77_ex.in  cmakelists_raja_CUDA_ex.in  cmakelists_raja_CXX_ex.in  cmakelists_serial_CUDA_ex.in  cmakelists_serial_CXX_ex.in  cmakelists_serial_C_ex.in  cmakelists_serial_F2003_ex.in  cmakelists_serial_F77_ex.in  cmakelists_serial_F90_ex.in  cmakelists_serial_RAJA_ex.in  (+35 more)
examples/utilities/: custom_memory_helper.h  custom_memory_helper_gpu.h  custom_memory_helper_sycl.h  example_utilities.h  example_utilities.hpp  plot_data_2d.py  plot_data_time_series.py  test_utilities.f90
gptune-optimization/: CMakeLists.txt
gptune-optimization/diffusion_2D/: CMakeLists.txt  main_arkode.cpp  main_cvode.cpp  main_ida.cpp
src/arkode/: CMakeLists.txt  LICENSE  Makefile.in  README  README.md  arkode.c  arkode_adapt.c  arkode_adapt_impl.h  arkode_arkstep.c  arkode_arkstep_impl.h  arkode_arkstep_io.c  arkode_arkstep_nls.c  arkode_band.c  arkode_bandpre.c  arkode_bandpre_impl.h  arkode_bbdpre.c  arkode_bbdpre_impl.h  arkode_butcher.c  arkode_butcher_dirk.c  arkode_butcher_dirk.def  arkode_butcher_erk.c  arkode_butcher_erk.def  arkode_cli.c  arkode_dense.c  arkode_direct.c  arkode_direct_impl.h  arkode_erkstep.c  arkode_erkstep_impl.h  arkode_erkstep_io.c  arkode_forcingstep.c  arkode_forcingstep_impl.h  arkode_imexgarkstep.c  arkode_imexgarkstep_impl.h  arkode_imexgarkstep_io.c  arkode_imexgarkstep_nls.c  arkode_impl.h  arkode_interp.c  arkode_interp_impl.h  arkode_io.c  arkode_klu.c  (+49 more)
src/cpodes/: CMakeLists.txt  LICENSE  Makefile.in  README  TODO  cpodes.c  cpodes_band.c  cpodes_band_impl.h  cpodes_bandpre.c  cpodes_bandpre_impl.h  cpodes_bbdpre.c  cpodes_bbdpre_impl.h  cpodes_dense.c  cpodes_dense_impl.h  cpodes_direct.c  cpodes_direct_impl.h  cpodes_ic.c  cpodes_impl.h  cpodes_io.c  cpodes_lapack.c  cpodes_lapack_impl.h  cpodes_nls.c  cpodes_private.h  cpodes_proj.c  cpodes_root.c  cpodes_spbcgs.c  cpodes_spgmr.c  cpodes_spils.c  cpodes_spils_impl.h  cpodes_sptfqmr.c
src/cvode/: CHANGES  CMakeLists.txt  Makefile.in  README  README.md  cvode.c  cvode_band.c  cvode_band_impl.h  cvode_bandpre.c  cvode_bandpre_impl.h  cvode_bbdpre.c  cvode_bbdpre_impl.h  cvode_cli.c  cvode_constraints.c  cvode_dense.c  cvode_dense_impl.h  cvode_diag.c  cvode_diag_fused.cu  cvode_diag_impl.h  cvode_direct.c  cvode_direct_impl.h  cvode_fused.cu  cvode_fused_cuda.cu  cvode_fused_gpu.cpp  cvode_fused_stubs.c  cvode_hypamgpre.c  cvode_hypamgpre_impl.h  cvode_impl.h  cvode_io.c  cvode_klu.c  cvode_lapack.c  cvode_lapack_impl.h  cvode_ls.c  cvode_ls_impl.h  cvode_nls.c  cvode_nls_fused.cu  cvode_proj.c  cvode_proj_impl.h  cvode_resize.c  cvode_sparse.c  (+7 more)
src/cvodes/: CMakeLists.txt  LICENSE  Makefile.in  README  README.md  cvodea.c  cvodea_io.c  cvodec.c  cvodes.c  cvodes_band.c  cvodes_band_impl.h  cvodes_bandpre.c  cvodes_bandpre_impl.h  cvodes_bbdpre.c  cvodes_bbdpre_impl.h  cvodes_cli.c  cvodes_dense.c  cvodes_dense_impl.h  cvodes_diag.c  cvodes_diag_impl.h  cvodes_direct.c  cvodes_direct_impl.h  cvodes_impl.h  cvodes_io.c  cvodes_klu.c  cvodes_lapack.c  cvodes_lapack_impl.h  cvodes_ls.c  cvodes_ls_impl.h  cvodes_nls.c  cvodes_nls_sim.c  cvodes_nls_stg.c  cvodes_nls_stg1.c  cvodes_proj.c  cvodes_proj_impl.h  cvodes_resize.c  cvodes_sparse.c  (+7 more)
(+8619 files in other folders)
